# prosegrain

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: clean-sample.md  slop-sample.md
src/: finding.rs  lib.rs  main.rs  output.rs  score.rs  text.rs
src/rules/: mod.rs  rhythm.rs  structure.rs  words.rs
tests/: integration.rs
